<resources>
    <string name="app_name">Ribbit</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_login">Log in</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Log In</string>
    <string name="sign_label">Don\'t have an account? Sign Up</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_error_message">Please make sure your enter all the information</string>
    <string name="sign_error_title">Opps!</string>
    <string name="login_up_error_message">Please make sure your enter all the information</string>
    <string name="login_error_title">Opps!</string>
    <string name="inbox_tab">Inbox</string>
    <string name="friends_tab">Friends</string>
    <string name="empty_inbox_label">No inbox</string>
    <string name="empty_friends_label">No friends added</string>
    <string name="edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="camera_label">Camera</string>
    <string name="error_external_storage">There was a problem</string>
    <string name="general_error">Sorry there was an error</string>
    <string name="video_file_size_warning">The selected video must be less than 10 mb</string>
    <string name="file_not_found_error">There was a problem with the selected file</string>
    <string name="error_file_size_to_large">Selected file to large, select new file</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Chosse Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipient">Choose Recipients</string>
    <string name="action_send">Send</string>
    <string name="error_selecting_file">There was an error with the file selected.Please select another file</string>
    <string name="sorry">Sorry</string>
    <string name="error_sending_message">There was an error sending your message</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="cds_background">Ribbit frog image background</string>
    <string name="subtitle">A Treehouse proyect</string>
    <string name="cancel_signup">Cancel</string>
    <string name="cds_message_icon">meesage icon</string>
    <string name="cds_user_avatar">User avatar</string>
    <string name="cds_user_checkmark">User checkmark image</string>
    <string name="push_message">"You have a new Ribbit message from %s "</string>
</resources>
