<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/logout"
        android:icon="@drawable/logout"
        app:showAsAction="never"

        />
    <item
        android:id="@+id/action_edit_friends"
        android:title="@string/edit_friends_label"
        android:orderInCategory="100"
        android:icon="@drawable/account_circle"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_take_a_picture"
        android:title="@string/camera_label"
        android:orderInCategory="100"
        android:icon="@drawable/ic_photo_camera_white_24dp"
        app:showAsAction="always"
        />
</menu>
