<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gabriel.ribbit.SignUpActivity"

    >


    <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/AuthBackground"
        >
        <ImageView
            android:id="@+id/background_imageview"
            style="@style/AuthBackgroundImage"/>

        <TextView
            android:id="@+id/title"
            style="@style/AuthTitle"/>

        <TextView
            android:id="@+id/subtitle"
            style="@style/AuthSubTitle"/>



        <LinearLayout
            android:id="@+id/edit_text_container"
            style="@style/FieldsContainer"
            android:layout_below="@id/subtitle"
            >

            <EditText
                android:id="@+id/user_name_field"
                style="@style/AuthEditText"
                android:hint="@string/username_hint"
                />

            <EditText
                android:id="@+id/password_field"
                style="@style/AuthEditText"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
               />

            <EditText
                android:id="@+id/email_field"
                style="@style/AuthEditText"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                />
        </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/edit_text_container"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:onClick="signUp"
        android:text="@string/sign_up_button_label"
        android:background="@drawable/button_custom"
        />
    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/cancel_signup"
        android:onClick="cancel"
        android:background="@drawable/button_custom"/>

</LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</LinearLayout>